[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  "associated-token-account/program",
  "associated-token-account/program-test",
  "binary-option/program",
  "binary-oracle-pair/program",
  "examples/rust/cross-program-invocation",
  "examples/rust/custom-heap",
  "examples/rust/logging",
  "examples/rust/sysvar",
  "examples/rust/transfer-lamports",
  "examples/rust/transfer-tokens",
  "feature-gate/program",
  "feature-proposal/program",
  "feature-proposal/cli",
  "governance/addin-mock/program",
  "governance/addin-api",
  "governance/program",
  "governance/test-sdk",
  "governance/tools",
  "governance/chat/program",
  "instruction-padding/program",
  "libraries/discriminator",
  "libraries/concurrent-merkle-tree",
  "libraries/math",
  "libraries/merkle-tree-reference",
  "libraries/pod",
  "libraries/program-error",
  "libraries/tlv-account-resolution",
  "libraries/type-length-value",
  "libraries/type-length-value-derive-test",
  "memo/program",
  "name-service/program",
  "managed-token/program",
  "record/program",
  "shared-memory/program",
  "single-pool/cli",
  "single-pool/program",
  "stake-pool/cli",
  "stake-pool/program",
  "stateless-asks/program",
  "token-collection/program",
  "token-group/example",
  "token-group/interface",
  "token-lending/cli",
  "token-lending/program",
  "token-metadata/example",
  "token-metadata/interface",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token-upgrade/cli",
  "token-upgrade/program",
  "token-wrap/program",
  "token/cli",
  "token/program",
  "token/program-2022",
  "token/program-2022-test",
  "token/transfer-hook/cli",
  "token/transfer-hook/example",
  "token/transfer-hook/interface",
  "token/client",
  "utils/cgen",
  "utils/test-client",
  "token-lending/flash_loan_receiver",
]

exclude = [
]

resolver = "2"


[workspace.dependencies]
solana-program = "2.1.7"
borsh = "1.5.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = "0.8.2" }
solana-program-test = "2.1.7"
solana-sdk = "2.1.7"
solana-account-decoder = "2.1.7"
solana-clap-v3-utils = "2.1.7"
solana-cli-config = "2.1.7"
solana-cli-output = "2.1.7"
solana-client = "2.1.7"
solana-logger = "2.1.7"
solana-remote-wallet = "2.1.7"
solana-transaction-status = "2.1.7"
solana-vote-program = "2.1.7"
solana-test-validator = "2.1.7"
solana-clap-utils = "2.1.7"
solana-banks-interface = "2.1.7"
solana-rpc-client = "2.1.7"
solana-rpc-client-api = "2.1.7"
solana-zk-token-sdk = "2.1.7"
