[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  "governance/program",
]

exclude = [
]

resolver = "2"


[workspace.dependencies]
solana-program = "2.1.7"
borsh = "1.5.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-program-test = "2.1.7"
solana-sdk = "2.1.7"
solana-account-decoder = "2.1.7"
solana-clap-v3-utils = "2.1.7"
solana-cli-config = "2.1.7"
solana-cli-output = "2.1.7"
solana-client = "2.1.7"
solana-logger = "2.1.7"
solana-remote-wallet = "2.1.7"
solana-transaction-status = "2.1.7"
solana-vote-program = "2.1.7"
solana-test-validator = "2.1.7"
solana-clap-utils = "2.1.7"
solana-banks-interface = "2.1.7"
solana-rpc-client = "2.1.7"
solana-rpc-client-api = "2.1.7"
solana-zk-token-sdk = "2.1.7"
spl-tlv-account-resolution = "0.9.0"
spl-transfer-hook-interface = "0.9.0"
spl-token-client = "0.13.0"


[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1