[package]
name = "binary-option"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
thiserror = "2.0"
spl-token = {version = "4.0", path = "../../token/program", features = ["no-entrypoint"]}
arrayref = "0.3.7"
borsh = { workspace = true }
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
