[package]
name = "spl-governance-v3"
version = "3.1.3"
description = "Solana Program Library Governance Program v3.1.3"
repository = "https://github.com/Mythic-Project/spl-governance-v3.1.2"
homepage = "https://github.com/Mythic-Project/spl-governance-v3.1.2/tree/main/governance"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
test-sbf = []
custom-panic = []

[dependencies]
arrayref = "0.3.7"
bincode = "3.0.0"
borsh = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.195"
serde_derive = "1.0.103"
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-governance-tools = { version = "0.1.3", path ="../tools"}
spl-governance-addin-api = { version = "0.1.3", path ="../addin-api"}
thiserror = "1.0"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.21"
proptest = "1.5"
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-governance-test-sdk = { version = "0.1.3", path ="../test-sdk"}
spl-governance-addin-mock = { version = "0.1.3", path ="../addin-mock/program"}
spl-transfer-hook-example = { path = "../../token/transfer-hook/example", features = [
  "no-entrypoint",
] }

[lib]
name = "spl_governance"
crate-type = ["cdylib", "lib"]

[lints]
workspace = true