[package]
name = "spl-governance-test-sdk"
version = "0.1.3"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = { workspace = true }
lazy_static = "1.4.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.227"
serde_derive = "1.0.103"
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { version = "4.0.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { workspace = true }
thiserror = "1.0"
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-transfer-hook-example = { version = "0.4", path = "../../token/transfer-hook/example", features = [ "no-entrypoint" ] }
spl-token-client = { workspace = true }
mpl-core = "0.8.1-beta.1"

[lints]
workspace = true