[package]
name = "spl-governance-tools"
version = "0.1.3"
description = "Solana Program Library Governance Tools"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.227"
serde_derive = "1.0.103"
solana-program = { workspace = true }
thiserror = "1.0"
