[package]
name = "spl-math"
version = "0.2.0"
description = "Solana Program Library Math"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
solana-program = { workspace = true }
thiserror = "2.0"
uint = "0.9"

[dev-dependencies]
proptest = "1.4.0"
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
libm = "0.2.8"

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
