[package]
name = "spl-managed-token"
version = "0.1.0"
description = "Solana Program Library Token Swap"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_managed_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
borsh = { workspace = true }
shank = "^0.4.5"
solana-program = { workspace = true }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [ "no-entrypoint", ] }
spl-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
thiserror = "^1.0.56"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
