[package]
name = "spl-name-service"
description = "Solana Program Library Name Service"
version = "0.3.0"
repository = "https://github.com/solana-labs/solana-program-library"
authors = [
  "lcchy <lucas@bonfida.com>",
  "Solana Labs Maintainers <maintainers@solanalabs.com>"
]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }
num-traits = "0.2"
borsh = { workspace = true }
num-derive = "0.4.1"
thiserror = "1.0.56"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
