[package]
name = "spl-single-pool-cli"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool Command-line Utility"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
tokio = "1.35"
clap = { version = "3.2.23", features = ["derive"] }
console = "0.16.1"
borsh = { workspace = true }
bincode = "1.3.1"
serde = "1.0.195"
serde_derive = "1.0.103"
serde_json = "1.0.111"
serde_with = "3.4.0"
solana-account-decoder = { workspace = true }
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-vote-program = { workspace = true }
spl-token = { version = "4.0", path="../../token/program", features = [ "no-entrypoint" ] }
spl-token-client = { version = "0.8", path="../../token/client" }
spl-associated-token-account = { version = "2.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-single-pool = { version = "1.0.0", path="../program", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-test-validator = { workspace = true }
serial_test = "3.0.0"
test-case = "3.3"
tempfile = "3.9.0"

[[bin]]
name = "spl-single-pool"
path = "src/main.rs"
