[package]
name = "spl-single-pool"
version = "1.0.0"
description = "Solana Program Library Single-Validator Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.7"
borsh = { workspace = true }
num-derive = "0.4"
num-traits = "0.2"
num_enum = "0.7.2"
solana-program = { workspace = true }
solana-security-txt = "1.1.1"
spl-token = { version = "4.0", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-vote-program = { workspace = true }
test-case = "3.3"
bincode = "1.3.1"
rand = "0.8.5"
approx = "0.5.1"

[lib]
crate-type = ["cdylib", "lib"]
