[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "1.0.0"

[dependencies]
borsh = { workspace = true }
clap = "2.33.3"
serde = "1.0.195"
serde_derive = "1.0.130"
serde_json = "1.0.145"
solana-account-decoder = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-program = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { version = "=2.3", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "=1.0.0", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "=4.0", path="../../token/program", features = [ "no-entrypoint" ]  }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "spl-stake-pool"
path = "src/main.rs"
