[package]
name = "stateless-asks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
spl-token = { version = "4.0", path = "../../token/program", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "2.0", path = "../../associated-token-account/program", features = ["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
