[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL Token Lending CLI"
edition = "2021"
homepage = "https://spl.solana.com/token-lending"
license = "Apache-2.0"
name = "spl-token-lending-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.2.0"

[dependencies]
clap = "2.33.3"
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token-lending = { version = "0.2", path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0", path="../../token/program", features = [ "no-entrypoint" ]  }

[[bin]]
name = "spl-token-lending"
path = "src/main.rs"
