[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Rust Client"
edition = "2021"
license = "Apache-2.0"
name = "spl-token-client"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.8.0"

[dependencies]
async-trait = "0.1"
futures = "0.3.30"
futures-util = "0.3"
solana-banks-interface = { workspace = true }
solana-cli-output = { workspace = true, optional = true }
solana-program-test = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
# We never want the entrypoint for ATA, but we want the entrypoint for token when
# testing token
spl-associated-token-account = { version = "2.0", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-memo = { version = "4.0.0", path = "../../memo/program", features = ["no-entrypoint"] }
spl-token = { version = "4.0", path="../program", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "1.0", path="../program-2022" }
spl-token-group-interface = { version = "0.1", path="../../token-group/interface" }
spl-token-metadata-interface = { version = "0.2", path="../../token-metadata/interface" }
spl-transfer-hook-interface = { version = "0.4", path="../transfer-hook/interface" }
thiserror = "2.0"

[features]
default = ["display"]
display = ["dep:solana-cli-output"]
