[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-transfer-hook-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.0"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.30"
solana-clap-v3-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
solana-logger = { workspace = true }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
spl-transfer-hook-interface = { version = "0.4", path = "../interface" }
spl-tlv-account-resolution = { version = "0.5.1" , path = "../../../libraries/tlv-account-resolution", features = ["serde-traits"] }
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.30"

[dev-dependencies]
solana-test-validator = { workspace = true }
spl-token-2022 = { version = "1.0", path = "../../program-2022", features = ["no-entrypoint"] }
spl-token-client = { version = "0.8", path = "../../client" }

[[bin]]
name = "spl-transfer-hook"
path = "src/main.rs"
