[package]
name = "spl-transfer-hook-example"
version = "0.4.0"
description = "Solana Program Library Transfer Hook Example Program"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["forbid-additional-mints"]
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-type-length-value = "0.7.0"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
